# sovereignshield-mobile

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
Artifacts/project/sovereignshield_mobile/: app.py  models.py  pdf_report.py  pyproject.toml  requirements.txt  sovereignshield_platform_integration.py
Artifacts/project/sovereignshield_mobile/agents/: _anthropic_client.py  planner.py  reviewer.py  worker.py
Artifacts/project/sovereignshield_mobile/assets/: QR_-Landing.b64.txt  QR_AuditShield_Live.b64.txt  QR_Mobile_Tiny_Sized.b64.txt  QR_SovereignShield_Desktop.b64.txt  QR_SovereignShield_Mobile.b64.txt  QR_StarGuard_Desktop.b64.txt  README.md  avatar.b64.txt
Artifacts/project/sovereignshield_mobile/core/: audit_db.py  audit_log.py  charts.py  opa_eval.py  tf_parser.py
Artifacts/project/sovereignshield_mobile/rag/: __init__.py  retriever.py
Artifacts/project/sovereignshield_mobile/tests/: __init__.py  test_sovereignshield_mobile.py  test_sprint4.py
tests/: test_sprint4.py
