[project]
name = "sovereignshield"
version = "0.1.0"
description = "Sovereign cloud compliance app: OPA evaluate → Planner → Worker → Reviewer → RAG/Supabase"
requires-python = ">=3.10"
dependencies = [
    "shiny>=1.0.0",
    "anthropic>=0.39.0",
    "supabase>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "plotnine>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
